impr(filter permission): correct alignment of icon and change add label
Related to CAM-3733

--- a/webapps/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.less
+++ b/webapps/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.less
@@ -18,6 +18,9 @@
     width: 39px;
     padding: @padding-base-vertical @padding-base-horizontal;
     border: 1px solid transparent;
+    > .glyphicon {
+      vertical-align: middle;
+    }
   }
 
   .global-access {
